--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "customer": "node customer_microservice/source/index.js"
+    "customer": "NODE_ENV=dev nodemon customer_microservice/source/index.js"
   },
   "keywords": [],
   "author": "",
