Added Products Microservice

--- a/products/package.json
+++ b/products/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=prod node source/index.js",
+    "dev": "NODE_ENV=dev nodemon source/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "jest": "^29.0.3"
   }
 }
