--- a/shopping/.env.dev
+++ b/shopping/.env.dev
@@ -1,13 +1,11 @@
-APP_SECRET ='jg_youtube_tutorial'
-
-APP_SECRET ='jg_youtube_tutorial'
+APP_SECRET =`That's why it's a secret`
 
 # Mongo DB
 MONGODB_URI='mongodb://localhost:27017/online_store_microservices'
 
-MSG_QUEUE_URL='amqps://silhzuuj:VIwIKGv_kQ_uzFxPhhFaXRzeUHVhBYAj@sparrow.rmq.cloudamqp.com/silhzuuj'
+MSG_QUEUE_URL='amqp://guest:guest@localhost:5672'
 
 EXCHANGE_NAME='ONLINE_STORE'
 
 # Port
-PORT=8003
+PORT=3003
