Shopping Service Created

--- a/products/.env.dev
+++ b/products/.env.dev
@@ -1,9 +1,9 @@
 APP_SECRET =`That's why it's a secret`
 
 # Mongo DB
-MONGODB_URI='mongodb://localhost:27017/online_store_microservices'
+MONGODB_URI='mongodb://nosql-db:27017/online_store_microservices'
 
-MSG_QUEUE_URL='amqp://guest:guest@localhost:5672'
+MSG_QUEUE_URL='amqp://guest:guest@amqp:5672'
 
 EXCHANGE_NAME='ONLINE_STORE'
 
