--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,18 @@
 version: "3"
 services:
+  amqp:
+    image: rabbitmq:3.12.0-beta.2-management
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+    container_name: amqp
   nosql-db:
     image: mongo
     ports:
       - "27018:27017"
     container_name: nosql-db
+    depends_on:
+      - "amqp"
     volumes:
       - ./db/:/data/db
   products:
@@ -17,6 +25,7 @@ services:
     restart: always
     depends_on:
       - "nosql-db"
+      - "amqp"
     volumes:
       - .:/app
       - /app/products/node_modules
@@ -33,6 +42,7 @@ services:
     restart: always
     depends_on:
       - "nosql-db"
+      - "amqp"
     volumes:
       - .:/app
       - /app/shopping/node_modules
@@ -48,7 +58,7 @@ services:
     restart: always
     depends_on:
       - "nosql-db"
-
+      - "amqp"
     volumes:
       - .:/app/
       - /app/customer/node_modules
